--- a/oysterpack/pyproject.toml
+++ b/oysterpack/pyproject.toml
@@ -9,9 +9,15 @@ readme = "README.md"
 python = "^3.11"
 py-algorand-sdk = "^2.0.0"
 python-ulid = "^1.1.0"
+pyteal = "^0.22.0"
+beaker-pyteal = "^0.5.1"
+mypy = "^0.991"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.0.5"
+black = "^22.12.0"
+mypy = "^0.991"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
