added makefile targets for - getting algod status - starting/stopping kmd
- added dependencies: sqlalchemy, click, click-shell

--- a/oysterpack/Makefile
+++ b/oysterpack/Makefile
@@ -17,3 +17,18 @@ check:
 
 pydoc:
 	poetry run python -m pydoc -b
+
+# algorand node commands depend on the $ALGORAND_DATA env var
+# if not set, then it defaults to /var/lib/algorand
+check_algorand_data_env_var:
+ALGORAND_DATA ?= "/var/lib/algorand"
+
+algod-status: check_algorand_data_env_var
+	sudo -u algorand goal -d $(ALGORAND_DATA) node status
+
+kmd-start: check_algorand_data_env_var
+	sudo -u algorand goal -d $(ALGORAND_DATA) kmd start
+
+kmd-stop: check_algorand_data_env_var
+	sudo -u algorand goal -d $(ALGORAND_DATA) kmd stop
+
