--- a/oysterpack/pyproject.toml
+++ b/oysterpack/pyproject.toml
@@ -12,6 +12,9 @@ python-ulid = "^1.1.0"
 pyteal = "^0.22.0"
 beaker-pyteal = "^0.5.1"
 mypy = "^0.991"
+click = "^8.1.3"
+click-shell = "^2.1"
+sqlalchemy = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.0.5"
