--- a/oysterpack/pyproject.toml
+++ b/oysterpack/pyproject.toml
@@ -15,6 +15,7 @@ mypy = "^0.991"
 click = "^8.1.3"
 click-shell = "^2.1"
 sqlalchemy = "^2.0.0"
+pynacl = "^1.5.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.0.5"
