--- a/oysterpack/pyproject.toml
+++ b/oysterpack/pyproject.toml
@@ -22,6 +22,7 @@ coverage = "^7.0.5"
 black = "^22.12.0"
 mypy = "^0.991"
 flake8 = "^6.0.0"
+pylint = "^2.16.2"
 
 [build-system]
 requires = ["poetry-core"]
