--- a/oysterpack/pyproject.toml
+++ b/oysterpack/pyproject.toml
@@ -16,6 +16,7 @@ click = "^8.1.3"
 click-shell = "^2.1"
 sqlalchemy = "^2.0.0"
 pynacl = "^1.5.0"
+reactivex = "^4.0.4"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.0.5"
