--- a/oysterpack/pyproject.toml
+++ b/oysterpack/pyproject.toml
@@ -25,6 +25,7 @@ mypy = "^0.991"
 flake8 = "^6.0.0"
 pylint = "^2.16.2"
 alembic = "^1.9.4"
+pyright = "^1.1.296"
 
 [build-system]
 requires = ["poetry-core"]
