--- a/oysterpack/pyproject.toml
+++ b/oysterpack/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["oysterpack.inc <2zP6OaymGZhJTHFvQMzp6Ze>"]
 readme = "README.md"
+packages =[
+    {include="oysterpack"}
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
