--- a/oysterpack/pyproject.toml
+++ b/oysterpack/pyproject.toml
@@ -13,7 +13,7 @@ python = "^3.11"
 py-algorand-sdk = "^2.0.0"
 python-ulid = "^1.1.0"
 pyteal = "^0.23.0"
-beaker-pyteal = "^0.6.0"
+beaker-pyteal = "^1.0.0b2"
 mypy = "^0.991"
 click = "^8.1.3"
 click-shell = "^2.1"
