WIP - beaker v1 upgrade

--- a/oysterpack/Makefile
+++ b/oysterpack/Makefile
@@ -45,4 +45,4 @@ kmd-stop: check_algorand_data_env_var
 	sudo -u algorand goal -d $(ALGORAND_DATA) kmd stop
 
 sandbox-reset:
-	algokit sandbox reset
+	algokit localnet reset
