--- a/oysterpack/pyproject.toml
+++ b/oysterpack/pyproject.toml
@@ -20,6 +20,7 @@ sqlalchemy = "^2.0.0"
 pynacl = "^1.5.0"
 reactivex = "^4.0.4"
 websockets = "^10.4"
+uvloop = "^0.17.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.0.5"
