--- a/oysterpack/pyproject.toml
+++ b/oysterpack/pyproject.toml
@@ -34,3 +34,6 @@ pyright = "^1.1.296"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pyright]
+include = ["oysterpack"]
