--- a/oysterpack/pyproject.toml
+++ b/oysterpack/pyproject.toml
@@ -21,6 +21,7 @@ pynacl = "^1.5.0"
 reactivex = "^4.0.4"
 websockets = "^10.4"
 uvloop = "^0.17.0"
+pactsdk = "^0.6.1"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.0.5"
