--- a/oysterpack/pyproject.toml
+++ b/oysterpack/pyproject.toml
@@ -13,13 +13,13 @@ python = "^3.11"
 py-algorand-sdk = "^2.0.0"
 python-ulid = "^1.1.0"
 pyteal = "^0.23.0"
-beaker-pyteal = "^1.0.0b2"
+beaker-pyteal = "^1.0.0"
 click = "^8.1.3"
 click-shell = "^2.1"
 sqlalchemy = "^2.0.0"
 pynacl = "^1.5.0"
 reactivex = "^4.0.4"
-websockets = "^10.4"
+websockets = "^11"
 uvloop = "^0.17.0"
 pactsdk = "^0.6.1"
 
